# spsolve

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
benchmarks/simple/: plot_bar.m  run_average.m  run_average.py  run_general_ave.py
src/: spsolve.cpp  spsolve.h  spsolve_pardiso.hpp  spsolve_triangular.cpp  spsolve_triangular_C.cpp  spsolve_triangular_C.hpp  spsolve_triangular_F.cpp  spsolve_triangular_F.hpp
src/spsolve/: __init__.py  assure_contiguous.py  matmul.py  spparams.py  spparms.py  spsolve.py  spsolve_pardiso.py  spsolve_triangular.py
tests/: spsolve_test_base.py  test_A_not_contiguous.py  test_b_not_contiguous.py  test_c_contiguous.py  test_c_contiguous_inplace.py  test_c_unit_diagonal.py  test_f_contiguous.py  test_f_contiguous_inplace.py  test_f_unit_diagonal.py  test_unit_diagonal.py
tools/: simple_bench.py
